--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/runtime": "^7.0.0",
+    "babel-jest": "^24.9.0",
     "jest": "^24.9.0",
     "jest-transform-svelte": "^2.0.2",
     "npm-run-all": "^4.1.5",
